# BinanceWatcher

./: .flake8  README.md  Watcher.py  main.py  pyproject.toml  test_watcher.py
